--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -1,34 +1,20 @@
 
 # Tutorial tasks
 
- # Requires translation!
-Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = 
- # Requires translation!
-Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = 
- # Requires translation!
-Enter the city screen!\nClick the city button twice = 
- # Requires translation!
-Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 
- # Requires translation!
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = 
- # Requires translation!
-Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = 
- # Requires translation!
-Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = 
- # Requires translation!
-Meet another civilization!\nExplore the map until you encounter another civilization! = 
- # Requires translation!
-Open the options table!\nClick the menu button (top left) > click 'Options' = 
- # Requires translation!
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = 
- # Requires translation!
-Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = 
- # Requires translation!
-Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = 
- # Requires translation!
-Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = 
- # Requires translation!
-See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = 
+Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = Mueve una unidad!\nHaz clic en una unidad > Haz clic en un destino > Haz clic en el popup con la flecha
+Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Funda una ciudad!\nSelecciona el colono (unidad con la bandera) > Haz clic en 'Fundar ciudad' (abajo a la izquierda)
+Enter the city screen!\nClick the city button twice = Entra en la vista de la ciudad!\nHaz clic en la ciudad dos veces
+Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Elige una tecnología a investigar!\nHaz clic en el botón de la tecnología (verde, arriba a la izquierda) > \n Selecciona la tecnología > Haz clic en 'Investigar' (abajo a la derecha)
+Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Elige una construcción!\nEntra en la vista de la ciudad > Haz clic en un edificio o unidad (lado izquierdo)
+Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Pasa un turno!\nRecorre tus unidades con 'Siguiente unidad' > Haz clic en 'Siguiente turno'
+Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Reasigna casillas a explotar!\nEntra en la vista de la ciudad > Haz clic en la casilla asignada (en verde) para desasignarla > \n Haz clic en una casilla desasignada para asignarle población
+Meet another civilization!\nExplore the map until you encounter another civilization! = Conoce otra civilización!\nExplora el mapa hasta que te encuentres con otra civilización! = 
+Open the options table!\nClick the menu button (top left) > click 'Options' = Abre el menú de opciones!\nHaz clic en el botón del menú (arriba a la izquierda) > Haz clic en 'Opciones'
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = Construye una mejora!\nConstruye un trabajador > Muévelo a una casilla de llanura o de pradera > \n Elige 'Crear mejora' > Selecciona la granja > \n Deja el trabajador ahí hasta que termine
+Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Crea una ruta de comercio!\nConstruye carreteras entre tu capital y otra de tus ciudades\nO, pon tus trabajadores en automatico y se pondrán a ello cuando sea
+Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Conquista una ciudad!\nDeja una ciudad enemiga con poca salud > \nEntra en la ciudad con una unidad cuerpo a cuerpo
+Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Mueve una unidad aérea!\nSelecciona una unidad aérea > selecciona otra ciudad que este al alcance > \nMueve la unidad a la otra ciudad
+See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Mira tus estadísticas!\nEntra en la ventana de Visión general (arriba a la derecha) >\nHaz clic en 'Estadísticas' = 
 
 # Buildings
 
@@ -37,8 +23,7 @@ Indicates the capital city = Indica la capital
 Monument = Monumento
 Granary = Granero
 Stone Works = Cantería
- # Requires translation!
-Must not be on plains = 
+Must not be on plains = No se puede en llanuras
 Stonehenge = Stonehenge
  # Requires translation!
 'Time crumbles things; everything grows old and is forgotten under the power of time' - Aristotle = 
@@ -46,14 +31,12 @@ Library = Biblioteca
 +1 Science Per 2 Population = +1 Ciencia cada 2 habitantes
 Paper Maker = Papelera
 The Great Library = La Gran Biblioteca
- # Requires translation!
-Free Technology = 
+Free Technology = Tecnología gratis
  # Requires translation!
 'Libraries are as the shrine where all the relics of the ancient saints, full of true virtue, and all that without delusion or imposture are preserved and reposed.' - Sir Francis Bacon = 
 Circus = Circo
-Walls = Muros
- # Requires translation!
-Walls of Babylon = 
+Walls = Muralla
+Walls of Babylon = Las murallas de Babilonia
 The Pyramids = Las Pirámides
  # Requires translation!
 'O, let not the pains of death which come upon thee enter into my body. I am the god Tem, and I am the foremost part of the sky, and the power which protecteth me is that which is with all the gods forever.'  - The Book of the Dead, translated by Sir Ernest Alfred Wallis Budge = 
@@ -61,13 +44,11 @@ Worker construction increased 25% = +25% velocidad de construcción trabajador
 Provides 2 free workers = Proporciona 2 trabajadores gratis
 Barracks = Barracones
 Krepost = Krepost
-Culture and Gold costs of acquiring new tiles reduced by 25% in this city = El coste de comprar terrenos en esta ciudad se reduce un 25%
- # Requires translation!
-Colossus = 
+Culture and Gold costs of acquiring new tiles reduced by 25% in this city = El coste de comprar casillas en esta ciudad se reduce un 25%
+Colossus = Coloso
  # Requires translation!
 'Why man, he doth bestride the narrow world like a colossus, and we petty men walk under his huge legs, and peep about to find ourselves dishonorable graves.' - William Shakespeare, Julius Caesar = 
- # Requires translation!
-+1 gold from worked water tiles in city = 
++1 gold from worked water tiles in city = +1 de oro por cada casilla de agua explotada en esta ciudad
 Temple = Templo
 Burial Tomb = Tumba Sagrada
 The Oracle = El Oráculo
@@ -75,8 +56,7 @@ The Oracle = El Oráculo
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 
 Free Social Policy = Política social gratis
 National College = Universidad Nacional
- # Requires translation!
-Manhattan Project = 
+Manhattan Project = El proyecto Manhattan
 Chichen Itza = Chichén Itzá
  # Requires translation!
 'The katun is established at Chichen Itza. The settlement of the Itza shall take place there. The quetzal shall come, the green bird shall come. Ah Kantenal shall come. It is the word of God. The Itza shall come.'  - The Books of Chilam Balam = 
@@ -84,30 +64,23 @@ Golden Age length increases +50% = La Edad Dorada dura 50% más
  # Requires translation!
 Enables nuclear weapon = 
 Lighthouse = faro
- # Requires translation!
-Can only be built in coastal cities = 
- # Requires translation!
-+1 food from Ocean and Coast tiles = 
+Can only be built in coastal cities = Sólo puede ser construido en ciudades costeras
++1 food from Ocean and Coast tiles = +1 de comida en casillas costeras o de Océano
 The Great Lighthouse = El Faro Del Fin Del Mundo
  # Requires translation!
 'They that go down to the sea in ships, that do business in great waters; these see the works of the Lord, and his wonders in the deep.' - The Bible, Psalms 107:23-24 = 
 All military naval units receive +1 movement and +1 sight = Todas las unidades militares navales reciben +1de movimiento y +1 de vision
- # Requires translation!
-Courthouse = 
- # Requires translation!
-Remove extra unhappiness from annexed cities = 
- # Requires translation!
-Can only be built in annexed cities = 
+Courthouse = Palacio de Justicia
+Remove extra unhappiness from annexed cities = Elimina la infelicidad creada por anexionar ciudades
+Can only be built in annexed cities = Sólo puede ser construido en ciudades anexionadas
 Stable = Establos
- # Requires translation!
-+15% Production when building Mounted Units in this city = 
++15% Production when building Mounted Units in this city = +15% de producción mientras se construyen unidades montadas en esta ciudad
 Circus Maximus = Circo Máximo
 Hanging Gardens = Jardines Colgantes
  # Requires translation!
 'I think that if ever a mortal heard the word of God it would be in a garden at the cool of the day.'  - F. Frankfort Moore = 
 Colosseum = Coliseo
- # Requires translation!
-Terracotta Army = 
+Terracotta Army = Ejército de terracota
  # Requires translation!
 'Regard your soldiers as your children, and they will follow you into the deepest valleys; look on them as your own beloved sons, and they will stand by you even unto death.'  - Sun Tzu = 
 Market = Mercado
@@ -129,31 +102,24 @@ Machu Picchu = Machu Picchu
 Gold from all trade routes +25% = +25% de oro en todas las rutas de comercio
 Aqueduct = Acueducto
 40% of food is carried over after a new citizen is born = 40% de comida es arrastrada cada vez que nace un nuevo habitante
- # Requires translation!
-Great Wall = 
+Great Wall = Gran Muralla
  # Requires translation!
 'The art of war teaches us to rely not on the likelihood of the enemy's not attacking, but rather on the fact that we have made our position unassailable.'  - Sun Tzu = 
- # Requires translation!
-Enemy land units must spend 1 extra movement point when inside your territory (obsolete upon Dynamite) = 
+Enemy land units must spend 1 extra movement point when inside your territory (obsolete upon Dynamite) = Las unidades terrestres enemigas deben gastar un punto de movimiento extra al moverse por dentro de tu territorio (obsoleto al investigar Dinamita)
 Workshop = Taller
- # Requires translation!
-Longhouse = 
- # Requires translation!
-+1 Production from each worked Forest tile = 
+Longhouse = Casa comunal
++1 Production from each worked Forest tile = +1 de producción por cada casilla de Bosque explotada
 Forge = Forja
 Harbor = Puerto
 +1 production from all sea resources worked by the city = +1 de produccion a todos los recursos acuaticos trabajados por la ciudad
 Connects trade routes over water = Conecta rutas de comercio por el agua
 University = Universidad
 +2 Science from each worked Jungle tile = Las selvas proporcionan +2 ciencia
- # Requires translation!
-Wat = 
+Wat = Wat
 Oxford University = Universidad de Oxford
 Castle = Castillo
- # Requires translation!
-Mughal Fort = 
- # Requires translation!
-Alhambra = 
+Mughal Fort = Fuerte Rojo
+Alhambra = Alhambra
  # Requires translation!
 'Justice is an unassailable fortress, built on the brow of a mountain which cannot be overthrown by the violence of torrents, nor demolished by the force of armies.'  - Joseph Addison = 
  # Requires translation!
@@ -175,8 +141,7 @@ Sistine Chapel = Capilla Sixtina
 'I live and love in God's peculiar light.' - Michelangelo Buonarroti = 
 Culture in all cities increased by 25% = Cultura en todas las ciudades incrementada 25%
 Bank = Banco
- # Requires translation!
-Hanse = 
+Hanse = Hansa
  # Requires translation!
 +5% Production for every Trade Route with a City-State in the empire = 
  # Requires translation!
