--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "com.unciv.app"
         minSdkVersion 14
         targetSdkVersion 29
-        versionCode 344
-        versionName "3.4.0"
+        versionCode 345
+        versionName "3.4.0-patch1"
 
         archivesBaseName = "Unciv"
     }
