--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -8,13 +8,13 @@ Pick a technology to research!\nClick on the tech button (greenish, top left) > 
 Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Elige una construcción!\nEntra en la vista de la ciudad > Haz clic en un edificio o unidad (lado izquierdo)
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Pasa un turno!\nRecorre tus unidades con 'Siguiente unidad' > Haz clic en 'Siguiente turno'
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Reasigna casillas a explotar!\nEntra en la vista de la ciudad > Haz clic en la casilla asignada (en verde) para desasignarla > \n Haz clic en una casilla desasignada para asignarle población
-Meet another civilization!\nExplore the map until you encounter another civilization! = Conoce otra civilización!\nExplora el mapa hasta que te encuentres con otra civilización! = 
+Meet another civilization!\nExplore the map until you encounter another civilization! = Conoce otra civilización!\nExplora el mapa hasta que te encuentres con otra civilización!
 Open the options table!\nClick the menu button (top left) > click 'Options' = Abre el menú de opciones!\nHaz clic en el botón del menú (arriba a la izquierda) > Haz clic en 'Opciones'
 Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = Construye una mejora!\nConstruye un trabajador > Muévelo a una casilla de llanura o de pradera > \n Elige 'Crear mejora' > Selecciona la granja > \n Deja el trabajador ahí hasta que termine
 Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Crea una ruta de comercio!\nConstruye carreteras entre tu capital y otra de tus ciudades\nO, pon tus trabajadores en automatico y se pondrán a ello cuando sea
 Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Conquista una ciudad!\nDeja una ciudad enemiga con poca salud > \nEntra en la ciudad con una unidad cuerpo a cuerpo
 Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Mueve una unidad aérea!\nSelecciona una unidad aérea > selecciona otra ciudad que este al alcance > \nMueve la unidad a la otra ciudad
-See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Mira tus estadísticas!\nEntra en la ventana de Visión general (arriba a la derecha) >\nHaz clic en 'Estadísticas' = 
+See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Mira tus estadísticas!\nEntra en la ventana de Visión general (arriba a la derecha) >\nHaz clic en 'Estadísticas'
 
 # Buildings
 
