--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -2,33 +2,33 @@
 # Tutorial tasks
 
  # Requires translation!
-Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = 
+Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = Перемістіть підрозділ!\nНатисніть на підрозділ > Натисніть на пункт призначення > Натисніть на стрілку
+ # Requires translation! > 
+Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Спробуйте заснувати міста\nВиберіть Поселенця (із значком прапора) > Натисніть на «Заснувати місто»
  # Requires translation!
-Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = 
+Enter the city screen!\nClick the city button twice = Зайдіть на екран міста!\nНатисніть на кнопку міста двічі
  # Requires translation!
-Enter the city screen!\nClick the city button twice = 
+Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Виберіть технологію для дослідження!\nНатисніть на кнопку технологій (зеленувата, верхня ліва) > \n виберіть технологію > натисніть «Дослідити»(нижня ліва)
  # Requires translation!
-Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 
+Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Виберіть що створювати!\nУвійдіть до екрану міста > Натисніть на підрозділ чи будівлю (ліворуч)
  # Requires translation!
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = 
+Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Пропустіть хід!\nНатисніть багато раз на «Наступний підрозділ» > Натисніть на «Наступний хід»
  # Requires translation!
-Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = 
+Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Перевстановіть клітини, на яких працюють городяни!\nУвійдіть до екрану міста > натисніть на призначену (зелену) клітину, щоб зробити непризначеною > \n натисніть на непризначену клітину, щоб зробити призначеною
  # Requires translation!
-Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = 
+Meet another civilization!\nExplore the map until you encounter another civilization! = Зустріньте іншу цивілізацію!\nДосліджуйте мапу для зустрічі з іншої цивілізацією!
  # Requires translation!
-Meet another civilization!\nExplore the map until you encounter another civilization! = 
- # Requires translation!
-Open the options table!\nClick the menu button (top left) > click 'Options' = 
+Open the options table!\nClick the menu button (top left) > click 'Options' = Відкрийте вкладку з налаштуваннями\nНатисніть на кнопку меню (зверху ліворуч) > Натисність на «Налаштування»
  # Requires translation!
 Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = 
  # Requires translation!
-Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = 
+Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Створіть торговий шлях!\nБудуйте дороги між вашою столицею та іншим містом\nАбо автоматизуйте свого робітника і дозвольте йому зробити це автоматично 
  # Requires translation!
-Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = 
+Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Захопіть місто!\n Зробіть так, щоб у міста майже лишалось здоров’я > \nУвійдіть до міста з ближньобійником
  # Requires translation!
-Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = 
+Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Перемістіть повітряний підрозділ!\nВиберіть його !\n виберіть інше місто в радіусі дії > \nПеремість підрозділ в інше місто
  # Requires translation!
-See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = 
+See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Подивіться статистику\nУвійдіть до екрану огляну (верхній правий вугол) >\nНатисніть на «Статистика»
 
 # Buildings
 
@@ -257,12 +257,12 @@ Indeed! = Справді!
 Denounce ([numberOfTurns] turns) = 
 We will remember this. = Ми пам’ятатимемо це.
 Unforgivable = Непрощальне
-Enemy = Ворог
-Competitor = Конкурент
-Neutral = Нейтральний
-Favorable = Вигідний
-Friend = Дружній
-Ally = Союзницький
+Enemy =  ворожі
+Competitor =  конкурентні
+Neutral =  нейтральні
+Favorable =  вигідні
+Friend =  дружні
+Ally =  союзницькі
  # Requires translation!
 Provides [amountOfCulture] culture at [30] Influence = 
  # Requires translation!
@@ -824,7 +824,7 @@ Our status = Наш стан
 Global status = Глобальний стан
 Spaceship parts remaining = Залишилось частин космічного корабля
 Branches completed = Галузей завершено
-Undefeated civs = Непереможені цивілазації
+Undefeated civs = Непереможені цивілізації
 What would you like to do with the city? = Що ви хочете зробити з цим містом?
 Annex = Анексувати
 Annexed cities become part of your regular empire. = Анексовані міста стануть частиною вашою імперією.
@@ -1781,4 +1781,4 @@ Ambush II = Повітряна засідка II
 Haka War Dance = Бойовий танець Гака
 -10% combat strength for adjacent enemy units = Сусідні ворожі підрозділи отримують силу атаки -10%
  # Requires translation!
-Rejuvenation = 
+Rejuvenation = Відновлення здоров’я
