--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -18,166 +18,225 @@ See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick
 
 # Buildings
 
+## Ancient era buildings
+
 Palace = 
 Indicates the capital city = 
+
 Monument = 
 Granary = 
 Stone Works = 
 Must not be on plains = 
+
 Stonehenge = 
 'Time crumbles things; everything grows old and is forgotten under the power of time' - Aristotle = 
+
 Library = 
 +1 Science Per 2 Population = 
 Paper Maker = 
+
 The Great Library = 
 Free Technology = 
 'Libraries are as the shrine where all the relics of the ancient saints, full of true virtue, and all that without delusion or imposture are preserved and reposed.' - Sir Francis Bacon = 
+
 Circus = 
 Walls = 
 Walls of Babylon = 
+
 The Pyramids = 
 'O, let not the pains of death which come upon thee enter into my body. I am the god Tem, and I am the foremost part of the sky, and the power which protecteth me is that which is with all the gods forever.'  - The Book of the Dead, translated by Sir Ernest Alfred Wallis Budge = 
 Worker construction increased 25% = 
 Provides 2 free workers = 
+
 Barracks = 
 Krepost = 
 Culture and Gold costs of acquiring new tiles reduced by 25% in this city = 
+
 Colossus = 
 'Why man, he doth bestride the narrow world like a colossus, and we petty men walk under his huge legs, and peep about to find ourselves dishonorable graves.' - William Shakespeare, Julius Caesar = 
 +1 gold from worked water tiles in city = 
+
 Temple = 
 Burial Tomb = 
+
 The Oracle = 
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 
 Free Social Policy = 
-National College = 
-Manhattan Project = 
-Chichen Itza = 
-'The katun is established at Chichen Itza. The settlement of the Itza shall take place there. The quetzal shall come, the green bird shall come. Ah Kantenal shall come. It is the word of God. The Itza shall come.'  - The Books of Chilam Balam = 
-Golden Age length increases +50% = 
-Enables nuclear weapon = 
+
+
 Lighthouse = 
 Can only be built in coastal cities = 
 +1 food from Ocean and Coast tiles = 
+
 The Great Lighthouse = 
 'They that go down to the sea in ships, that do business in great waters; these see the works of the Lord, and his wonders in the deep.' - The Bible, Psalms 107:23-24 = 
 All military naval units receive +1 movement and +1 sight = 
+
+National College = 
+
+Chichen Itza = 
+'The katun is established at Chichen Itza. The settlement of the Itza shall take place there. The quetzal shall come, the green bird shall come. Ah Kantenal shall come. It is the word of God. The Itza shall come.'  - The Books of Chilam Balam = 
+Golden Age length increases +50% = 
+
 Courthouse = 
 Remove extra unhappiness from annexed cities = 
 Can only be built in annexed cities = 
+
 Stable = 
 +15% Production when building Mounted Units in this city = 
+
 Circus Maximus = 
+
 Hanging Gardens = 
 'I think that if ever a mortal heard the word of God it would be in a garden at the cool of the day.'  - F. Frankfort Moore = 
+
 Colosseum = 
+
 Terracotta Army = 
 'Regard your soldiers as your children, and they will follow you into the deepest valleys; look on them as your own beloved sons, and they will stand by you even unto death.'  - Sun Tzu = 
+
 Market = 
 Bazaar = 
 Provides 1 extra copy of each improved luxury resource near this City = 
 +2 Gold for each source of Oil and oasis = 
+
 Monastery = 
+
 Notre Dame = 
 'Architecture has recorded the great ideas of the human race. Not only every religious symbol, but every human thought has its page in that vast book.'  - Victor Hugo = 
+
 Hagia Sophia = 
 'For it soars to a height to match the sky, and as if surging up from among the other buildings it stands on high and looks down upon the remainder of the city, adorning it, because it is a part of it, but glorying in its own beauty'  - Procopius, De Aedificis = 
 +33% great person generation in all cities = 
+
 Mint = 
+
 Machu Picchu = 
 'Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of Inca Land.'  - Hiram Bingham = 
 Gold from all trade routes +25% = 
+
 Aqueduct = 
 40% of food is carried over after a new citizen is born = 
+
 Great Wall = 
 'The art of war teaches us to rely not on the likelihood of the enemy's not attacking, but rather on the fact that we have made our position unassailable.'  - Sun Tzu = 
 Enemy land units must spend 1 extra movement point when inside your territory (obsolete upon Dynamite) = 
+
 Workshop = 
 Longhouse = 
 +1 Production from each worked Forest tile = 
+
 Forge = 
+
 Harbor = 
 +1 production from all sea resources worked by the city = 
 Connects trade routes over water = 
+
 University = 
 +2 Science from each worked Jungle tile = 
 Wat = 
+
 Oxford University = 
 Castle = 
 Mughal Fort = 
+
 Alhambra = 
 'Justice is an unassailable fortress, built on the brow of a mountain which cannot be overthrown by the violence of torrents, nor demolished by the force of armies.'  - Joseph Addison = 
 All newly-trained melee, mounted, and armored units in this city receive the Drill I promotion = 
+
 Angkor Wat = 
 'The temple is like no other building in the world. It has towers and decoration and all the refinements which the human genius can conceive of.'  - Antonio da Magdalena = 
 Cost of acquiring new tiles reduced by 25% = 
+
 Porcelain Tower = 
 'Things always seem fairer when we look back at them, and it is out of that inaccessible tower of the past that Longing leans and beckons.'  - James Russell Lowell = 
 Free great scientist appears = 
+
 Ironworks = 
 Armory = 
 Observatory = 
 Opera House = 
+
 Sistine Chapel = 
 'I live and love in God's peculiar light.' - Michelangelo Buonarroti = 
 Culture in all cities increased by 25% = 
+
 Bank = 
 Hanse = 
 +5% Production for every Trade Route with a City-State in the empire = 
 Satrap's Court = 
+
 Forbidden Palace = 
 'Most of us can, as we choose, make of this world either a palace or a prison' - John Lubbock = 
 Unhappiness from population decreased by 10% = 
+
 Theatre = 
+
 Leaning Tower of Pisa = 
 'Don't clap too hard - it's a very old building.' - John Osbourne = 
 Free Great Person = 
 Choose a free great person = 
 Get  = 
+
 Himeji Castle = 
 'Bushido is realized in the presence of death. This means choosing death whenever there is a choice between life and death. There is no other reasoning.'  - Yamamoto Tsunetomo = 
 +15% combat strength for units fighting in friendly territory = 
+
 Taj Mahal = 
 'The Taj Mahal rises above the banks of the river like a solitary tear suspended on the cheek of time.'  - Rabindranath Tagore = 
 Empire enters golden age = 
+
 Windmill = 
 Must not be on hill = 
 Museum = 
 Hermitage = 
+
 The Louvre = 
 'Every genuine work of art has as much reason for being as the earth and the sun'  - Ralph Waldo Emerson = 
 Free Great Artist Appears = 
+
 Seaport = 
 +1 production and gold from all sea resources worked by the city = 
 +15% production of naval units = 
+
 Public School = 
 Hospital = 
 25% of food is carried over after a new citizen is born = 
 Factory = 
 Stock Exchange = 
+
 Big Ben = 
 'To achieve great things, two things are needed: a plan, and not quite enough time.'  - Leonard Bernstein = 
 -15% to purchasing items in cities = 
+
 Cristo Redentor = 
 'Come to me, all who labor and are heavy burdened, and I will give you rest.'  - New Testament, Matthew 11:28 = 
 Culture cost of adopting new Policies reduced by 10% = 
+
 Kremlin = 
 'The Law is a fortress on a hill that armies cannot take or floods wash away.'   –- The Prophet Muhammed = 
 Defensive buildings in all cities are 25% more effective = 
+
 Neuschwanstein = 
 '...the location is one of the most beautiful to be found, holy and unapproachable, a worthy temple for the divine friend who has brought salvation and true blessing to the world.'  - King Ludwig II of Bavaria = 
 +1 happiness, +2 culture and +3 gold from every Castle = 
+
 Military Academy = 
+
 Brandenburg Gate = 
 Free Great General appears near the Capital = 
 'Pale Death beats equally at the poor man's gate and at the palaces of kings.'  - Horace = 
+
 Broadcast Tower = 
+
 Eiffel Tower = 
 'We live only to discover beauty, all else is a form of waiting'  - Kahlil Gibran = 
 Provides 1 happiness per social policy = 
+
 Statue of Liberty = 
 'Give me your tired, your poor, your huddled masses yearning to breathe free, the wretched refuse of your teeming shore. Send these, the homeless, tempest-tossed to me, I lift my lamp beside the golden door!'  - Emma Lazarus = 
 +1 Production from specialists = 
+
 Medical Lab = 
 Research Lab = 
 Hydro Plant = 
@@ -185,27 +244,36 @@ Stadium =
 Solar Plant = 
 Must be next to desert = 
 Must be next to mountain = 
+
 Sydney Opera House = 
 'Those who lose dreaming are lost.'  - Australian Aboriginal saying = 
 +1 population in each city = 
 +1 happiness in each city = 
+
 Pentagon = 
 'In preparing for battle I have always found that plans are useless, but planning is indispensable.'  - Dwight D. Eisenhower = 
 Gold cost of upgrading military units reduced by 33% = 
+
+Manhattan Project = 
+Enables nuclear weapon = 
+
 Apollo Program = 
 Enables construction of Spaceship parts = 
+
 Nuclear Plant = 
+
 Spaceship Factory = 
 Increases production of spaceship parts by 50% = 
 Spaceship part = 
-Hubble Space Telescope = 
-'The wonder is, not that the field of stars is so vast, but that man has measured it.'  - Anatole France = 
-2 free great scientists appear = 
-Increases production of spaceship parts by 25% = 
 SS Booster = 
 SS Cockpit = 
 SS Engine = 
 SS Stasis Chamber = 
+
+Hubble Space Telescope = 
+'The wonder is, not that the field of stars is so vast, but that man has measured it.'  - Anatole France = 
+2 free great scientists appear = 
+Increases production of spaceship parts by 25% = 
 
 # Diplomacy,Trade,Nations
 
@@ -218,6 +286,7 @@ Requires a [buildingName] in all cities =
 Requires a [buildingName] in this city = 
 Requires [resource] = 
 Required tech: [requiredTech] = 
+
 Diplomacy = 
 War = 
 Peace = 
@@ -241,6 +310,7 @@ May our nations forever remain united! =
 Indeed! = 
 Denounce ([numberOfTurns] turns) = 
 We will remember this. = 
+
 Unforgivable = 
 Enemy = 
 Competitor = 
@@ -248,12 +318,9 @@ Neutral =
 Favorable = 
 Friend = 
 Ally = 
-Provides [amountOfCulture] culture at [30] Influence = 
-Provides 3 food in capital and 1 food in other cities at 30 Influence = 
-Provides 3 happiness at 30 Influence = 
-Provides land units every 20 turns at 30 Influence = 
-Gift [giftAmount] gold (+[influenceAmount] influence) = 
-Relationship changes in another [turnsToRelationshipChange] turns = 
+
+## Diplomatic modifiers
+
 You declared war on us! = 
 Your warmongering ways are unacceptable to us. = 
 You have captured our cities! = 
@@ -268,16 +335,27 @@ Your so-called 'friendship' is worth nothing. =
 You have publicly denounced us! = 
 You have denounced our allies = 
 You have denounced our enemies = 
+You betrayed your promise to not settle cities near us = 
+You fulfilled your promise to stop settling cities near us! = 
+You refused to stop settling cities near us = 
+Your arrogant demands are in bad taste = 
+Your use of nuclear weapons is disgusting! = 
+
 Demands = 
 Please don't settle new cities near us. = 
 Very well, we shall look for new lands to settle. = 
 We shall do as we please. = 
-You betrayed your promise to not settle cities near us = 
-You fulfilled your promise to stop settling cities near us! = 
-You refused to stop settling cities near us = 
 We noticed your new city near our borders, despite your promise. This will have....implications. = 
-Your arrogant demands are in bad taste = 
-Your use of nuclear weapons is disgusting! = 
+
+# City states
+
+Provides [amountOfCulture] culture at [30] Influence = 
+Provides 3 food in capital and 1 food in other cities at 30 Influence = 
+Provides 3 happiness at 30 Influence = 
+Provides land units every 20 turns at 30 Influence = 
+Gift [giftAmount] gold (+[influenceAmount] influence) = 
+Relationship changes in another [turnsToRelationshipChange] turns = 
+
 Cultured = 
 Maritime = 
 Mercantile = 
@@ -287,6 +365,9 @@ Influence:  =
 Reach 30 for friendship. = 
 Reach highest influence above 60 for alliance. = 
 Ally:  = 
+
+# Trades 
+
 Trade = 
 Offer trade = 
 Retract offer = 
@@ -322,60 +403,79 @@ National ability =
 Babylon = 
 Receive free Great Scientist when you discover Writing, Earn Great Scientists 50% faster = 
 Nebuchadnezzar II = 
+
 Greece = 
 Alexander = 
 City-State Influence degrades at half and recovers at twice the normal rate = 
+
 China = 
 Wu Zetian = 
 Great general provides double combat bonus, and spawns 50% faster = 
+
 Egypt = 
 Ramesses II = 
 +20% production towards Wonder construction = 
+
 England = 
 Elizabeth = 
 +2 movement for all naval units = 
+
 France = 
 Napoleon = 
 +2 Culture per turn from cities before discovering Steam Power = 
+
 Russia = 
 Catherine = 
 Strategic Resources provide +1 Production, and Horses, Iron and Uranium Resources provide double quantity = 
+
 Rome = 
 Augustus Caesar = 
 +25% Production towards any buildings that already exist in the Capital = 
+
 Arabia = 
 Harun al-Rashid = 
 +1 Gold from each Trade Route, Oil resources provide double quantity = 
+
 America = 
 George Washington = 
 All land military units have +1 sight, 50% discount when purchasing tiles = 
+
 Japan = 
 Oda Nobunaga = 
 Units fight as though they were at full strength even when damaged = 
+
 Germany = 
 Otto von Bismark = 
 67% chance to earn 25 Gold and recruit a Barbarian unit from a conquered encampment, -25% land units maintenance. = 
+
 India = 
 Gandhi = 
 Unhappiness from number of Cities doubled, Unhappiness from number of Citizens halved. = 
+
 The Ottomans = 
 Suleiman I = 
 Pay only one third the usual cost for naval unit maintenance. Melee naval units have a 1/3 chance to capture defeated naval units. = 
+
 Korea = 
 Sejong = 
 +2 Science for all specialists and Great Person tile improvements = 
+
 Iroquois = 
 Hiawatha = 
 All units move through Forest and Jungle Tiles in friendly territory as if they have roads. These tiles can be used to establish City Connections upon researching the Wheel. = 
+
 Persia = 
 Darius I = 
 Golden Ages last 50% longer. During a Golden Age, units receive +1 Movement and +10% Strength = 
+
 Polynesia = 
 Kamehameha I = 
 Can embark and move over Coasts and Oceans immediately. +1 Sight when embarked. +10% Combat Strength bonus if within 2 tiles of a Moai. = 
+
 Siam = 
 Ramkhamhaeng = 
 Food and Culture from Friendly City-States are increased by 50% = 
+
 Songhai = 
 Askia = 
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = 
@@ -398,18 +498,22 @@ Number of city-states =
 One City Challenge = 
 No barbarians = 
 No ancient ruins = 
+
 Victory conditions = 
 Scientific = 
 Domination = 
 Cultural = 
+
 HIGHLY EXPERIMENTAL - YOU HAVE BEEN WARNED! = 
 Online Multiplayer = 
+
 World size = 
 Tiny = 
 Small = 
 Medium = 
 Large = 
 Huge = 
+
 Difficulty = 
 Settler = 
 Chieftain = 
@@ -419,6 +523,7 @@ King =
 Emperor = 
 Immortal = 
 Deity = 
+
 AI = 
 Remove = 
 Random = 
@@ -426,6 +531,21 @@ Human =
 Hotseat = 
 User ID = 
 Click to copy = 
+
+
+Game Speed = 
+Quick = 
+Standard = 
+Epic = 
+Marathon = 
+
+Starting Era = 
+It looks like we can't make a map with the parameters you requested! = 
+Maybe you put too many players into too small a map? = 
+No human players selected! = 
+
+# Multiplayer
+
 Username = 
 Multiplayer = 
 Could not download game! = 
@@ -440,15 +560,9 @@ To create a multiplayer game, check the 'multiplayer' toggle in the New Game scr
 You can assign your own user ID there easily, and other players can copy their user IDs here and send them to you for you to include them in the game. = 
 Once you've created your game, enter this screen again to copy the Game ID and send it to the other players. = 
 Players can enter your game by copying the game ID to the clipboard, and clicking on the Join Game button = 
-Game Speed = 
-Quick = 
-Standard = 
-Epic = 
-Marathon = 
-Starting Era = 
-It looks like we can't make a map with the parameters you requested! = 
-Maybe you put too many players into too small a map? = 
-No human players selected! = 
+
+# Save game menu
+
 Current saves = 
 Show autosaves = 
 Saved game name = 
@@ -690,6 +804,8 @@ Landing =
 Flanking = 
 vs [unitType] = 
 Terrain = 
+
+
 Hurry Research = 
 Conduct Trade Mission = 
 Your trade mission to [civName] has earned you [goldAmount] gold and [influenceAmount] influence! = 
@@ -747,6 +863,9 @@ Global status =
 Spaceship parts remaining = 
 Branches completed = 
 Undefeated civs = 
+
+# Capturing a city
+
 What would you like to do with the city? = 
 Annex = 
 Annexed cities become part of your regular empire. = 
@@ -808,6 +927,7 @@ Requires =
 Adopt policy = 
 Adopt free policy = 
 Unlocked at = 
+
 Tradition = 
 +3 culture in capital and increased rate of border expansion = 
 Aristocracy = 
@@ -822,6 +942,7 @@ Monarchy =
 +1 gold and -1 unhappiness for every 2 citizens in capital = 
 Tradition Complete = 
 +15% growth and +2 food in all cities = 
+
 Liberty = 
 +1 culture in every city = 
 Collective Rule = 
@@ -836,6 +957,7 @@ Meritocracy =
 +1 happiness for every city connected to capital, -5% unhappiness from citizens = 
 Liberty Complete = 
 Free Great Person of choice near capital = 
+
 Honor = 
 +25% bonus vs Barbarians; gain Culture when you kill a barbarian unit = 
 Warrior Code = 
@@ -848,6 +970,7 @@ Military Caste =
 Each city with a garrison increases happiness by 1 and culture by 2 = 
 Professional Army = 
 Honor Complete = 
+
 Gain gold for each unit killed = 
 Piety = 
 Building time of culture buildings reduced by 15% = 
@@ -863,6 +986,7 @@ Free Religion =
 +1 culture for each monument, temple and monastery. Gain a free policy. = 
 Piety Complete = 
 Reduce culture cost of future policies by 10% = 
+
 Commerce = 
 +25% gold in capital = 
 Trade Unions = 
@@ -877,6 +1001,7 @@ Protectionism =
 +1 happiness from each luxury resource = 
 Commerce Complete = 
 +1 gold from every trading post, double gold from Great Merchant trade missions = 
+
 Rationalism = 
 Production to science conversion in cities increased by 33% = 
 Secularism = 
@@ -891,6 +1016,7 @@ Scientific Revolution =
 Gain 2 free technologies = 
 Rationalism Complete = 
 +1 gold from all science buildings = 
+
 Freedom = 
 +25% great people rate = 
 Constitution = 
@@ -905,6 +1031,7 @@ Democracy =
 Specialists produce half normal unhappiness = 
 Freedom Complete = 
 Tile yield from great improvement +100%, golden ages increase by 50% = 
+
 Autocracy = 
 -33% unit upkeep costs = 
 Populism = 
