Th whole point of the previous operation was to add these translation lines... and so of course I forgot

--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -606,6 +606,10 @@ Map uploaded successfully! = Mapa úspěšně nahrána!
 
 Options = Možnosti
 Display options = Zobrazit možnosti
+ # Requires translation!
+Gameplay options = 
+ # Requires translation!
+Other options = 
 Turns between autosaves = Počet kol mezi automatickým uložením hry
 Sound effects volume = Hlasitost zvuků
 Music volume = Hlasitost hudby
