--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -1001,6 +1001,10 @@ Map uploaded successfully! =
 Options = Opties
 Display options = Weergaveopties
  # Requires translation!
+Gameplay options = 
+ # Requires translation!
+Other options = 
+ # Requires translation!
 Turns between autosaves = 
  # Requires translation!
 Sound effects volume = 
