--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -586,6 +586,10 @@ Map uploaded successfully! = Carte téléchargée avec succès !
 
 Options = Options
 Display options = Options d'affichage
+ # Requires translation!
+Gameplay options = 
+ # Requires translation!
+Other options = 
 Turns between autosaves = Tours avant sauvegarde automatique
 Sound effects volume = Volume sonore
 Music volume = Volume de la musique
