--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -589,6 +589,10 @@ Map uploaded successfully! = Karte hochladen war erfolgreich!
 
 Options = Optionen
 Display options = Anzeigeeinstellungen
+ # Requires translation!
+Gameplay options = 
+ # Requires translation!
+Other options = 
 Turns between autosaves = Runden bis zum nächsten automatischen Speichern
 Sound effects volume = Lautstärke Soundeffekte
 Music volume = Lautstärke Musik
