--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -583,6 +583,10 @@ Map uploaded successfully! = Mappa caricata con successo
 
 Options = Opzioni
 Display options = Opzioni
+ # Requires translation!
+Gameplay options = 
+ # Requires translation!
+Other options = 
 Turns between autosaves = Turni tra autosalvataggi
 Sound effects volume = Volume effetti
 Music volume = Volume musica
