--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -602,6 +602,10 @@ Map uploaded successfully! = 지도가 성공적으로 업로드되었습니다!
 
 Options = 설정
 Display options = 디스플레이 설정
+ # Requires translation!
+Gameplay options = 
+ # Requires translation!
+Other options = 
 Turns between autosaves = 자동 저장 간격
 Sound effects volume = 음향효과 음량
 Music volume = 음악 음량
