--- a/android/assets/jsons/translationsByLanguage/Malay.properties
+++ b/android/assets/jsons/translationsByLanguage/Malay.properties
@@ -924,6 +924,10 @@ Options =
  # Requires translation!
 Display options = 
  # Requires translation!
+Gameplay options = 
+ # Requires translation!
+Other options = 
+ # Requires translation!
 Turns between autosaves = 
  # Requires translation!
 Sound effects volume = 
