--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -586,6 +586,10 @@ Map uploaded successfully! = Mapa została przesłana pomyślnie
 
 Options = Ustawienia
 Display options = Ustawienia wyświetlacza
+ # Requires translation!
+Gameplay options = 
+ # Requires translation!
+Other options = 
 Turns between autosaves = Przełącza pomiędzy autozapisami
 Sound effects volume = Poziom głośności efektów
 Music volume = Poziom głośności muzyki
