--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -663,6 +663,10 @@ Map uploaded successfully! = Mapa carregado com sucesso!
 
 Options = Opções
 Display options = Opções de tela
+ # Requires translation!
+Gameplay options = 
+ # Requires translation!
+Other options = 
 Turns between autosaves = Turnos entre autosaves
 Sound effects volume = Volume dos efeitos sonoros
 Music volume = Volume da música
