--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -849,6 +849,10 @@ Map uploaded successfully! =
 Options = Opțiuni
 Display options = Opțiuni afișaj
  # Requires translation!
+Gameplay options = 
+ # Requires translation!
+Other options = 
+ # Requires translation!
 Turns between autosaves = 
  # Requires translation!
 Sound effects volume = 
