--- a/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
@@ -582,6 +582,10 @@ Map uploaded successfully! = 地图上传成功！
 
 Options = 选项
 Display options = 显示选项
+ # Requires translation!
+Gameplay options = 
+ # Requires translation!
+Other options = 
 Turns between autosaves = 自动存档间隔回合
 Sound effects volume = 音效音量
 Music volume = 音乐音量
