--- a/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
@@ -582,6 +582,10 @@ Map uploaded successfully! = 成功上傳地圖！
 
 Options = 選項
 Display options = 顯示選項
+ # Requires translation!
+Gameplay options = 
+ # Requires translation!
+Other options = 
 Turns between autosaves = 自動存檔間隔回合
 Sound effects volume = 音效音量
 Music volume = 音樂音量
