--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -646,6 +646,10 @@ Map uploaded successfully! = Мапа вивантажена успішно!
 
 Options = Налаштування
 Display options = Налаштування екрану
+ # Requires translation!
+Gameplay options = 
+ # Requires translation!
+Other options = 
 Turns between autosaves = Ходів між автозбереженням
 Sound effects volume = Гучність звуків
 Music volume = Гучність музики
