--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -582,6 +582,8 @@ Map uploaded successfully! =
 
 Options = 
 Display options = 
+Gameplay options = 
+Other options = 
 Turns between autosaves = 
 Sound effects volume = 
 Music volume = 
