--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -621,6 +621,10 @@ Map uploaded successfully! = Карта успешно загружена!
 
 Options = Настройки
 Display options = Параметры экрана
+ # Requires translation!
+Gameplay options = 
+ # Requires translation!
+Other options = 
 Turns between autosaves = Кол-во ходов между автосохранениями
 Sound effects volume = Громкость звука
  # Requires translation!
