--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -814,6 +814,10 @@ Map uploaded successfully! =
 Options = Opciones
 Display options = Opciones de pantalla
  # Requires translation!
+Gameplay options = 
+ # Requires translation!
+Other options = 
+ # Requires translation!
 Turns between autosaves = 
  # Requires translation!
 Sound effects volume = 
