--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -292,6 +292,13 @@ Requires a [buildingName] in this city =
 Requires [resource] = 
 Required tech: [requiredTech] = 
 
+Current construction = 
+Construction queue = 
+Pick a construction = 
+Queue empty = 
+Add to queue = 
+Remove from queue = 
+
 Diplomacy = 
 War = 
 Peace = 
