--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -582,11 +582,11 @@ Map uploaded successfully! = Mappa caricata con successo
 # Options
 
 Options = Opzioni
-Display options = Opzioni
+Display options = Opzioni grafiche
  # Requires translation!
-Gameplay options = 
+Gameplay options = Opzioni di gioco
  # Requires translation!
-Other options = 
+Other options = Altre opzioni
 Turns between autosaves = Turni tra autosalvataggi
 Sound effects volume = Volume effetti
 Music volume = Volume musica
