--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -1,34 +1,20 @@
 
 # Tutorial tasks
 
- # Requires translation!
-Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = 
- # Requires translation!
-Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = 
- # Requires translation!
-Enter the city screen!\nClick the city button twice = 
- # Requires translation!
-Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 
- # Requires translation!
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = 
- # Requires translation!
-Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = 
- # Requires translation!
-Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = 
- # Requires translation!
-Meet another civilization!\nExplore the map until you encounter another civilization! = 
- # Requires translation!
-Open the options table!\nClick the menu button (top left) > click 'Options' = 
- # Requires translation!
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = 
- # Requires translation!
-Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = 
- # Requires translation!
-Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = 
- # Requires translation!
-Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = 
- # Requires translation!
-See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = 
+Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = Передвиньте юнит!\nВыберите юнит > Выберите клетку на карте > Нажмите на иконку стрелки
+Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Постройте город!\nВыберите поселенца (юнит с флажком) > Нажмите 'Основать город' (нижний левый угол)
+Enter the city screen!\nClick the city button twice = Откройте экран города!\nНажмите на кнопку города дважды
+Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Выберите технологию для исследования!\nНажмите на кнопку технология (зеленая, сверху слева) > \n Выберите технологию > Нажмите 'Исследовать' (снизу справа)
+Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Выберите строительство!\nОткройте экран города > Нажмите на юнит или здание (с левой стороны)
+Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Пропустите ход!\nВыберите юнита с помощью кнопки 'Следующий юнит' > Нажмите 'Следующий ход'
+Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Переназначьте обрабатываемые клетки!\nОткройте экран города > Нажмите на назначенную (зеленую) клетку чтобы освободить её > \n Нажмите на свободную клетку чтобы назначить туда рабочих
+Meet another civilization!\nExplore the map until you encounter another civilization! = Встретьте другую цивилизацию!\nИсследуйте мир пока вы не стретите другую цивилизацию!
+Open the options table!\nClick the menu button (top left) > click 'Options' = Откройте таблицу параметров!\nНажмите на кнопку меню (сверху слева) > нажмите 'Параметры'
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = Постройте улучшение!\nПостройте рабочего > Отправьте его на клетку Равнины или Пересеченная местность > \n Выберите 'Создать улучшение' > Выберите ферму > \n Оставьте рабочего на клетке пока он не закончит работу
+Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Создайте торговый маршрут!\nПостройте дорогу между столицей и другим городом\nили, автоматизируйте рабочего и ждите когда он сделает это сам
+Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Завоюйте город!\nОпустите шкалу здоровья вражеского города до низкого уровня > \nВойдите в город юнитом ближнего боя
+Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Переместите воздушый юнит!\nВыберите воздушный юнит > Выберите другой город в доступном радиусе > \nПереместите юнит в другой город
+See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Посмотрите вашу статистику!\nОткройте экран обзора (верхний правый угол) >\nНажмите на 'Статистика'
 
 # Buildings
 
@@ -377,10 +363,8 @@ Mercantile = Торговый
 Militaristic = Воинственный
 Type:  = Тип: 
 Influence:  = Влияние: 
- # Requires translation!
-Reach 30 for friendship. = 
- # Requires translation!
-Reach highest influence above 60 for alliance. = 
+Reach 30 for friendship. = Достигните 30 для дружбы.
+Reach highest influence above 60 for alliance. = Достигните влияния больше 60 чтобы стать союзником.
 Ally:  = Союзник:
 
 # Trades 
@@ -891,11 +875,9 @@ Undefeated civs = Непобеждённые цивилизации
 What would you like to do with the city? = Что вы хотите сделать с этим городом?
 Annex = Аннексировать
 Annexed cities become part of your regular empire. = Аннексированые города стали частью вашей страны.
- # Requires translation!
-Their citizens generate 2x the unhappiness, unless you build a courthouse. = 
+Their citizens generate 2x the unhappiness, unless you build a courthouse. = Их горожане удвоят несчастье пока вы не построите здание суда.
 Puppet = Марионетка
- # Requires translation!
-Puppeted cities do not increase your tech or policy cost, but their citizens generate 1.5x the regular unhappiness. = 
+Puppeted cities do not increase your tech or policy cost, but their citizens generate 1.5x the regular unhappiness. = Города-марионетки не увеличивают стоимость технологий или политики, но их жители увеличивают несчастье в полтора раза.
 You have no control over the the production of puppeted cities. = Вы не имеете контроля над производством городов-марионеток.
 Puppeted cities also generate 25% less Gold and Science. = Также города-марионетки производят на 25% меньше Золота и Науки.
 A puppeted city can be annexed at any time. = Город-марионетку можно аннексировать в любое время.
